fix(form): add explicit display block to form field wrap

--- a/packages/default/scss/forms/_layout.scss
+++ b/packages/default/scss/forms/_layout.scss
@@ -64,7 +64,10 @@
             }
         }
 
-        .k-form-field {
+
+        // Form field
+        .k-form-field,
+        .k-form-field-wrap {
             display: block;
         }
 
